# claude-agent-platform

./: .gitignore  CAP-V2-FINAL-PLAN.md  CAP-V2-VERIFICATION.md  CAP_SYSTEM_DESIGN_v1.md  CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh  upgrade.sh
.harness/: config.template.json  manifest.json  mcp-policy.json
agents/: aws-architect.md  code-review.md  dev.md  optimization.md  orchestrator.md  system.md  teacher.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  DISTRIBUTION.md  INSTALL.md  REVIEWS.md  TECHNICAL.md  USAGE.md  WORKSPACE-ENDPOINTS.md  agent-coordination.md  agents.md  cli-reference.md  installation.md  intelligent-indexing.md  troubleshooting.md
docs/adr/: ADR-001-search-engine.md  ADR-002-graph-storage.md  ADR-003-mcp-transport.md  ADR-004-security-model.md  ADR-005-bedrock-embeddings.md  ADR-006-no-caching.md  ADR-007-ingestion-strategy.md  ADR-008-delivery-phases.md  ADR-009-enforcement-hooks.md  ADR-010-memory-architecture.md  ADR-011-adaptive-routing.md  ADR-012-kb-enforcement-hooks.md  ADR-012-unified-database.md  ADR-013-dag-execution.md  ADR-013-workspace-registry.md  ADR-014-consensus-protocol.md  ADR-015-circuit-breakers.md  ADR-016-checkpoint-resume.md  ADR-017-code-intelligence.md  ADR-018-auto-sync.md  ADR-019-degree-aware-graph.md  README.md
docs/diagrams/: repo-resolution-flow.md
docs/providers/: anthropic.md  bedrock.md  local.md
knowledge/: INDEX.md
observability/grafana/: cap-agent-error-rate-slo.json
observability/prometheus/: alert_rules.yml  recording_rules.yml
scripts/: auto-sync.sh  aws-sso-login.sh  build-knowledge-base.sh  init-repo.sh  verify_install.sh
src/cap/: __init__.py  __main__.py  config.py  db.py
src/cap/cli/: commands.py  daemon.py  daemon_service.py  index_cmd.py  lifecycle.py  main.py  watch.py  witness.py
src/cap/code_intel/: __init__.py  blast_radius.py  extractor.py  indexer.py  queries.py
src/cap/cost/: tracker.py
src/cap/data/: config.toml.default  seed_patterns.json
src/cap/data/agents/: ab-testing.md  accessibility-test.md  adr-writer.md  alb-ingress.md  alertmanager-rules.md  algorithm.md  analytics-dashboard.md  api-contract.md  api-design.md  api-docs.md  apm-setup.md  argocd-apps.md  argocd-sync.md  artifact-management.md  aws-architect.md  batch-processing.md  blue-green-deploy.md  build-optimization.md  caching-strategy.md  canary-deploy.md  capacity-planning.md  changelog-generator.md  chaos-test.md  cicd.md  cli-tools.md  cloudfront-cdn.md  code-review.md  compliance-gdpr.md  compliance-hipaa.md  (+110 more)
src/cap/enforcement/: passthrough.py  routing_enforcer.py
src/cap/eval/: __init__.py  cli.py  framework.py
src/cap/harness/: __init__.py  agent_store.py  agent_tools.py  agentdb.py  converse_executor.py  coordination.py  cost_meter.py  daemon.py  embed_router.py  executor.py  governance.py  hooks.py  llm_provider.py  retention.py  swarm.py  validation.py  vector_patterns.py
src/cap/health/: __init__.py  monitor.py
src/cap/hooks/: posttool.py  pretool.py
src/cap/integrity/: witness.py
src/cap/learning/: __init__.py  engine.py  feedback.py  trust.py
src/cap/lib/: __init__.py  agent_bus.py  agent_context.py  api_gateway.py  autonomy.py  backlog.py  blast_radius.py  budget_manager.py  chunker.py  code_understanding.py  config.py  consolidator.py  coordination_engine.py  dashboard.py  db_init.py  db_maintenance.py  decision_cards.py  dedup.py  dependency_resolver.py  disagreement.py  drift_sentinel.py  embed_cache.py  embeddings.py  git_knowledge.py  graph.py  harness_config.py  hooks.py  inbox.py  intelligent_indexer.py  knowledge_graph.py  model_probe.py  models.py  reasoning_traces.py  recursive_indexer.py  repo_extractor.py  repo_resolver.py  retrieval.py  secret_scanner.py  security.py  sync_engine.py  (+7 more)
src/cap/memory/: consolidation.py  eviction.py  manager.py  scorer.py
src/cap/orchestration/: checkpoint.py  consensus.py  context.py  dag.py  executor.py  need_info.py  planner.py  quorum.py  review_loop.py  rollback.py  router.py  scratchpad.py
src/cap/reliability/: __init__.py  cascade.py  circuit_breaker.py  dlq.py
src/cap/runtime/: offline.py
src/cap/servers/: ast_server.py  backlog_server.py  code_intel_server.py  diagram_server.py  fleet_server.py  harness_server.py  knowledge_server.py  orchestrator_server.py  session_server.py  workflow_server.py
src/cap/sync/: __init__.py  engine.py  git_ops.py
templates/: CLAUDE.md.tmpl
tests/: conftest.py  test_agent_bus.py  test_agent_context.py  test_agent_store.py  test_agentdb.py  test_autonomy.py  test_backlog.py  test_blast_radius.py  test_budget_cli.py  test_cap_init_wizard.py  test_chunker.py  test_circuit_breaker.py  test_code_understanding.py  test_consolidator.py  test_converse_executor.py  test_coordination.py  test_coordination_engine.py  test_cost_meter.py  test_daemon.py  test_dag.py  test_dashboard.py  test_db.py  test_decision_cards.py  test_dependency_resolver.py  test_disagreement.py  test_doctor_command.py  test_drift_sentinel.py  test_embed_cache.py  test_embed_router.py  test_enforcement.py  test_executor.py  test_first_contact.py  test_git_knowledge.py  test_governance.py  test_graph.py  test_harness_hooks.py  test_harness_server.py  test_hooks.py  test_index_cli.py  test_init_improvements.py  (+19 more)
tests/integration/: test_enforcement.py  test_learning_pipeline.py  test_mcp_server_tools.py  test_orchestrate_e2e.py  test_upgrade_migration.py
tests/scenarios/: conftest.py  test_degraded_mode_scenarios.py  test_e2e_workflows.py  test_fresh_install.py  test_harness.py  test_harness_b.py  test_harness_c.py  test_harness_d.py  test_install_scenario.py  test_integration_scenarios.py  test_kb_chunking.py  test_kb_consolidation.py  test_kb_security.py  test_knowledge_query_scenario.py  test_learning_integration.py  test_multi_directory.py  test_phase4_polish.py  test_stress_degradation.py  test_workflow_routing.py  test_workflow_scenarios.py
workflows/: cross-repo-impact.js  incident-response.js  new-service-deployment.js  security-hardening.js  session-observe.js  system-evolve.js
(+15 files in other folders)
