[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-agent-platform"
version = "0.3.0"
description = "AI agent platform for Claude Code — hybrid retrieval, workflow orchestration, team simulation, and session memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "MOIA Platform Engineering" },
]
keywords = ["claude", "ai", "agents", "mcp", "platform"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "mcp>=1.0",
    "lancedb>=0.4",
    "boto3>=1.34",
    "pyarrow>=14.0",
    "pydantic>=2.0",
    "tomli>=2.0",
    "tomli-w>=1.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]

[project.scripts]
cap = "cap.cli.main:cli"

[project.urls]
Homepage = "https://github.com/moia-dev/claude-agent-platform"
Repository = "https://github.com/moia-dev/claude-agent-platform"
Issues = "https://github.com/moia-dev/claude-agent-platform/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cap"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
