[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-agent-platform"
version = "2.0.0"
description = "Claude Agent Platform — multi-agent orchestration, hybrid retrieval, workflow engine, and session memory for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "MOIA Platform Engineering" },
]
keywords = ["claude", "ai", "agents", "mcp", "platform", "orchestration", "retrieval"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "mcp>=1.0",
    "lancedb>=0.4",
    "boto3>=1.34",
    "pyarrow>=14.0",
    "pydantic>=2.0",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0",
    "click>=8.0",
    "rich>=13.0",
    "tree-sitter>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]

[project.scripts]
cap = "cap.cli.main:cli"
cap-orchestrator = "cap.servers.orchestrator_server:main"
cap-code-intel = "cap.servers.code_intel_server:main"
cap-knowledge = "cap.servers.knowledge_server:main"
cap-session = "cap.servers.session_server:main"
cap-backlog = "cap.servers.backlog_server:main"
cap-fleet = "cap.servers.fleet_server:main"
cap-diagram = "cap.servers.diagram_server:main"
cap-workflow = "cap.servers.workflow_server:main"
cap-ast = "cap.servers.ast_server:main"

[project.urls]
Homepage = "https://github.com/moia-dev/claude-agent-platform"
Repository = "https://github.com/moia-dev/claude-agent-platform"
Issues = "https://github.com/moia-dev/claude-agent-platform/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cap"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
